# dance-analysis

./: .gitignore  METRICS.md  README.md  app.py  pyproject.toml  requirements.txt  run.sh  setup.sh
.streamlit/: config.toml
src/dance_analysis/: __init__.py  align.py  audio.py  cli.py  config.py  ingest.py  metrics.py  pose.py  report.py  store.py  visualize.py
